Fix: Performance - Reduce layout shift by fixing header height and preloading fonts

--- a/css/header.css
+++ b/css/header.css
@@ -5,6 +5,7 @@
   width: 100%;
   z-index: 1000;
   padding: 0px 60px;
+  min-height: 80px;
 }
 
 /* Container alignment */
@@ -18,6 +19,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  min-height: 80px;
 }
 
 
